--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Galeria</title>
     <style>
         body {
-            background: url('BG.jpg') no-repeat center center fixed;
+            background: url('BG.JPG') no-repeat center center fixed;
             background-size: cover;
             display: flex;
             justify-content: center;
@@ -19,7 +19,7 @@
         .gallery {
             display: grid;
             justify-content: center;
-            grid-template-columns: repeat(auto-fit, minmax(33vw, 0vh)); /* Proporcjonalne kolumny */
+            grid-template-columns: repeat(auto-fit, minmax(33vw, 80vh)); /* Proporcjonalne kolumny */
             gap: 10px;
             max-width: 100vw; /* Zajmowanie 100% szerokości ekranu */
             width: 100%;
