--- a/index.html
+++ b/index.html
@@ -56,15 +56,17 @@
                     "2 One Peace Pants", "3 One Peace Pants", "4 One Peace Pants", "5 Dusty Rose", 
                     "6 Safari Mesh Pants", "7 Rusty Mesh Pants", "8 Angel Guardian Pants", 
                     "9 Rusty Garden Pants", "10 Dusty Plate Pants", "11 Dusty Plate Pants", 
-                    "12 Industrial Mesh Pants", "13 Anarchy Pants"
+                    "12 Industrial Mesh Pants", "13 Anarchy Pants", "14 Rusty Oil Pants",
+                    "15 Rusty Oil Pants", "16 One Peace Pants", "17 Rusty Oil Pants",
+                    "18 Rusty Oil Pants"
                 ];
                 
                 let images = folders.map(folder => {
                     let folderPath = `Drop/${folder}`;
                     return [
-                        `${folderPath}/${folder.split(' ')[0]} First.png`,
-                        `${folderPath}/${folder.split(' ')[0]} Second.png`,
-                        `${folderPath}/${folder.split(' ')[0]} SizeChart.png`
+                        `${folderPath}/${folder.split(' ')[0]} First.webp`,
+                        `${folderPath}/${folder.split(' ')[0]} Second.webp`,
+                        `${folderPath}/${folder.split(' ')[0]} SizeChart.webp`
                     ];
                 });
 
