--- a/index.html
+++ b/index.html
@@ -80,9 +80,17 @@
                     "26 Sandy Oil Pants",
                     "27 Industrial Mesh Pants",
                     "28 Industrial Mesh Pants",
+                    "30 Eyes Soul Wall Pants",
+                    "31 Stara Kumpela Pants",
+                    "32 YOU V2 Pants",
+                    "33 Cloudy Shorts",
+                    "35 Heaven Clouds Pants",
+                    "36 YOU V1 Pants",
                     "39 Rusty Oil Pants",
                     "40 Industrial Mesh Pants",
-                    "41 Industrial Mesh Pants"
+                    "41 Industrial Mesh Pants",
+                    "42 Kamui Gem Pants",
+                    "43 One Peace Pants Armored"
                 ];
                 
                 let images = folders.map(folder => {
